--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,8 @@
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="#">Search</a>
         {% if user.is_authenticated %}
-        <a class="p-2 text-dark" href="{% url "identity-create" %}">Add</a>
+        <a class="p-2 text-dark" href="{% url "identity-edit" %}">Edit</a>
+        <a class="p-2 text-dark" href="{% url "me" %}">Me</a>
         {% endif %}
       </nav>
       {% if user.is_authenticated %}
