--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -6,7 +6,7 @@
   {% for identity in identities %}
   <div class="card">
     <div class="card-body">
-      <a href="{{ identity.url }}">{{ identity.name }}</a>
+      <a rel="me" href="{{ identity.url }}">{{ identity.name }}</a>
     </div>
   </div>
   {% endfor %}
