--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -9,7 +9,10 @@
   <div class="card">
     <div class="card-body">
       {% if identity.looks_like_link %}
-      <a rel="me" href="{{ identity.url }}">{{ identity.name }}</a>
+      <a rel="me" href="{{ identity.url }}">
+        <span class="{{ identity.icon }}"></span>
+        {{ identity.name }}
+      </a>
       {% else %}
       {{ identity.name }}: {{ identity.url }}
       {% endif %}
