Improve front page copy

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,16 +38,19 @@
       {% endif %}
     </div>
 
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto">
       {% block "main" %}
-      <h1 class="display-4">Where are you?</h1>
+      <h1 class="display-4 text-center">Where are you?</h1>
       <p class="lead">
-        As closed social media sites never have your best interests at heart,
-        maybe a layer of indirection can save the day.
+        As closed social media sites never have our best interests at heart,
+        sometimes we have to move homes on the internet, and we can fall out of
+        touch with people as we go elsewhere.
       </p>
       <p class="lead">
-        Point people at your page on wheretofind.me and they can find what
-        social media site du jour you're actively using.
+        Maybe a layer of indirection can save the day. Point people at your
+        page on wheretofind.me and they can find you no matter what sites
+        you're using these days. It's like a business card for your social
+        media presence.
       </p>
       {% endblock "main" %}
     </div>
@@ -56,7 +59,7 @@
       <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
           <div class="col-12 col-md text-center">
-            <small class="d-block mb-3 text-muted">&copy; 2018-2019</small>
+            <small class="d-block mb-3 text-muted">&copy; 2018-2019 Kit La Touche</small>
           </div>
         </div>
       </footer>
