--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -9,7 +9,7 @@
   <div class="card">
     <div class="card-body">
       {% if identity.looks_like_link %}
-      <a rel="me" href="{{ identity.url }}">
+      <a rel="me nofollow" href="{{ identity.url }}">
         <span class="{{ identity.icon }}"></span>
         {{ identity.name }}
       </a>
