--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -4,7 +4,7 @@
 <h1 class="display-4">Where are you?</h1>
 <form method="post" action="." class="identities">
   {% for identity in identities %}
-  <div class="identity card" data-id="{{ identity.id }}">
+  <div class="identity card bg-light shadow-sm w-100 mb-3" data-id="{{ identity.id }}">
     <div class="card-body">
       <div class="form-group row">
         <label for="name-{{ identity.id }}" class="col-sm-2 col-form-label">Name</label>
@@ -29,3 +29,27 @@
   </button>
 </form>
 {% endblock "main" %}
+
+{% block "templates" %}
+<template id="identity">
+  <div class="identity card bg-light shadow-sm w-100 mb-3">
+    <div class="card-body">
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label name">Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control name" name="name" readonly placeholder="Example">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label url">URL</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control url" name="url" readonly placeholder="https://example.com/">
+        </div>
+      </div>
+      <button class="btn delete btn-outline-danger float-right">
+        <span class="fas fa-minus-circle"></span>
+      </button>
+    </div>
+  </div>
+</template>
+{% endblock "templates" %}
