--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -6,7 +6,7 @@
 <div class="card-deck">
   {% for identity in identities %}
   {% if identity.name %}
-  <div class="card">
+  <div class="card bg-light shadow-sm mb-3">
     <div class="card-body">
       {% if identity.looks_like_link %}
       <a rel="me nofollow" href="{{ identity.url }}">
