--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -18,6 +18,12 @@
           <input type="text" class="form-control" id="url-{{ identity.id }}" name="url" value="{{ identity.url }}">
         </div>
       </div>
+      <div class="d-none float-left msg-saving">
+        Saving…
+      </div>
+      <div class="d-none float-left msg-deleting">
+        Deleting…
+      </div>
       <button class="btn delete btn-outline-danger float-right">
         <span class="fas fa-minus-circle"></span>
       </button>
@@ -45,6 +51,12 @@
         <div class="col-sm-10">
           <input type="text" class="form-control url" name="url" readonly placeholder="https://example.com/">
         </div>
+      </div>
+      <div class="d-none float-left msg-saving">
+        Saving…
+      </div>
+      <div class="d-none float-left msg-deleting">
+        Deleting…
       </div>
       <button class="btn delete btn-outline-danger float-right">
         <span class="fas fa-minus-circle"></span>
