Rename the `pricing` classes.
This isn't actually a priced service - this is leftovers from a Bootstrap template.

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
       {% endif %}
     </div>
 
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto">
+    <div class="main px-3 py-3 pt-md-5 pb-md-4 mx-auto">
       {% block "main" %}
       <h1 class="display-4 text-center">Where are you?</h1>
       <p class="lead">
