--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,11 @@
             <small class="d-block mb-3 text-muted">Please <a href="{% url "user-profile" slug="kit" %}">get in touch</a> if you have any problems or feedback.</small>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12 col-md text-center">
+            <small class="d-block mb-3 text-muted"><a href="{% url "tos" %}">Terms of Service</a>.</small>
+          </div>
+        </div>
       </footer>
     </div>
 
