--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,6 +5,6 @@
 <form method="post" action="{% url "login" %}">
   {% csrf_token %}
   {{ form|crispy }}
-  <input type="submit" class="btn" value="Sign in">
+  <input type="submit" class="btn btn-primary" value="Sign in">
 </form>
 {% endblock "main" %}
