--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="">
+    <link rel="shortcut icon" type="image/png" href="">
 
     <title>Where to find me</title>
 
@@ -69,7 +69,10 @@
         </div>
         <div class="row">
           <div class="col-12 col-md text-center">
-            <small class="d-block mb-3 text-muted"><a href="{% url "tos" %}">Terms of Service</a>.</small>
+            <small class="d-block mb-3 text-muted">
+              <a href="{% url "tos" %}">Terms of Service</a>.
+              <a href="{% url "about" %}">About</a>.
+            </small>
           </div>
         </div>
       </footer>
