--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,8 @@
 {% block "main" %}
 <h1 class="display-4 text-center">About</h1>
 <p>
-  Just trying to help folks find each other as sites come and go.
+  I decided to make this to help folks find each other as sites come and go. I
+  like making webapps, and I figured this was something I could do to help.
 </p>
 <p>
   Icons from FontAwesome.
