Avoid fixed URLs so that this doesn't break if mounted at a subtree.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,5 +25,5 @@ html {
 }
 
 .identity {
-  background: url('/static/images/draghandle.png') no-repeat bottom 2px left 3px;
+  background: url('../images/draghandle.png') no-repeat bottom 2px left 3px;
 }
