--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{% url "identity-edit" %}">Edit</a>
         <a class="p-2 text-dark" href="{% url "me" %}">Me</a>
+        <a class="p-2 text-dark" href="{% url "follows" %}">Follows</a>
       </nav>
       {% endif %}
 
