--- a/templates/base.html
+++ b/templates/base.html
@@ -76,6 +76,13 @@
             </small>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12 col-md text-center">
+            <small class="d-block mb-3 text-muted">
+              <a href='https://ko-fi.com/B0B586NC'>Support us on Ko-fi</a>
+            </small>
+          </div>
+        </div>
       </footer>
     </div>
 
