Include GitHub link in About page

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,14 @@
   like making webapps, and I figured this was something I could do to help.
 </p>
 <p>
+  This is very much a work in progress! We're trying to work on it in the open,
+  so you can see our current list of oustanding bugs and feature ideas
+  <a href="https://github.com/wlonk/wheretofind.me/issues">on GitHub</a>, and
+  please feel free to contribute there if that's the kind of thing you do. If
+  you don't, you can always <a href="{% url "user-profile" slug="kit" %}">get
+  in touch</a> with me and I'll turn our conversation into a ticket.
+</p>
+<p>
   Icons from FontAwesome.
 </p>
 {% endblock "main" %}
