--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
         <a class="p-2 text-dark" href="{% url "identity-edit" %}">Edit</a>
         <a class="p-2 text-dark" href="{% url "me" %}">Me</a>
         <a class="p-2 text-dark" href="{% url "follows" %}">Follows</a>
+        <a class="p-2 text-dark" href="{% url "followers" %}">Followers</a>
       </nav>
       {% endif %}
 
