Blind email addresses.
Email addresses are the only "blind" kind of identity. For all blinded identities, we use a mangled (trivially - using ROT-13) form in the DOM and translate it back into its normal form by script. This is largely cargo-cult, as I haven't been able to find any convincing guidance on what spam crawlers do and do not decode in the wild.

Rot13 rendering is from https://github.com/tyea/erot13 revision 481a3a112046f5e58980e2ce336b7f3c9d7d2da0, distributed under the BSD 3-clause license.

Fixes #30.

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha384-Dziy8F2VlJQLMShA6FHWNul/veM9bCkRUaLqr199K94ntO5QUrLJBEbYegdSkkqX" crossorigin="anonymous"></script>
     <script src="{% static "js/main.js" %}"></script>
+    <script src="{% static "js/erot13.js" %}"></script>
 
     {% block "templates" %}
     {% endblock "templates" %}
