A few cleanups and fixes
The signup form is kinda _worse_, but it was the quickest way to inject
some useful styling and hints.

The edit form and URLs are now just better.

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
       {% if user.is_authenticated %}
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{% url "identity-edit" %}">Edit</a>
-        <a class="p-2 text-dark" href="{% url "me" %}">Me</a>
+        <a class="p-2 text-dark" href="{% url "me" %}">@{{ user.username }}</a>
         <a class="p-2 text-dark" href="{% url "follows" %}">Follows</a>
         <a class="p-2 text-dark" href="{% url "followers" %}">Followers</a>
       </nav>
