--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,14 @@
   like making webapps, and I figured this was something I could do to help.
 </p>
 <p>
+  I believe that "community" is a bunch of people who have each others' best
+  interests at heart and that it's important to be able to stay in touch, no
+  matter what changes the internet goes through. I think that a community
+  shouldn't be yoked to the platform it happens to be on, but should have some
+  life outside of that. I don't pretend that this site somehow solves that, but
+  I hope it'll help people keep in touch a bit better.
+</p>
+<p>
   This is very much a work in progress! We're trying to work on it in the open,
   so you can see our current list of oustanding bugs and feature ideas
   <a href="https://github.com/wlonk/wheretofind.me/issues">on GitHub</a>, and
