--- a/templates/tos.html
+++ b/templates/tos.html
@@ -18,6 +18,11 @@
   pointless.
 </p>
 <p>
+  We use cookies to enable you to log in to the site. We don't have any
+  tracking cookies or anything like that. But if you want to log in, you have
+  to accept that we have to use cookies to do that.
+</p>
+<p>
   Please be kind.
 </p>
 {% endblock "main" %}
