--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -6,7 +6,13 @@
   <p class="text-muted">
     Hit the plus to add a new location, hit the minus to remove it, and drag
     and drop them to arrange them into your preferred order. They save as soon
-    as you stop editing them.
+    as you click elsewhere.
+  </p>
+  <p class="text-muted">
+    If you want your links to be clickable, copy and paste in the entire
+    address to your profile on another site. For some services, such as
+    Discord, this isn't possible, so you can just put in your username and
+    we'll display it.
   </p>
   {% for identity in identities %}
   <div class="identity card bg-light shadow-sm w-100 mb-3" data-id="{{ identity.id }}">
