Add password management utilities
Fixes #61.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,4 +7,7 @@
   {{ form|crispy }}
   <input type="submit" class="btn btn-primary" value="Sign in">
 </form>
+<p>
+  <a href="{% url 'password_reset' %}">Forgot your password?</a>
+</p>
 {% endblock "main" %}
