--- a/templates/wheretofindme/follower_list.html
+++ b/templates/wheretofindme/follower_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1 class="display-4">Who follows me?</h1>
+<h1 class="display-4">Who knows where I am?</h1>
 <div>
   {% for follow in object_list %}
     <div class="card border-secondary shadow-sm mb-3">
