--- a/templates/wheretofindme/follow_list.html
+++ b/templates/wheretofindme/follow_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1 class="display-4">Where to find everyone else</h1>
+<h1 class="display-4">Where is everyone else?</h1>
 <div>
   {% for follow in object_list %}
     <div class="card border-secondary shadow-sm mb-3">
