--- a/templates/wheretofindme/edit_identities.html
+++ b/templates/wheretofindme/edit_identities.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<form method="post" action="." class="identities">
-  <h1 class="display-4">Where are you?</h1>
-  <p class="text-muted">
-    Hit the plus to add a new location, hit the minus to remove it, and drag
-    and drop them to arrange them into your preferred order. They save as soon
-    as you click elsewhere.
-  </p>
-  <p class="text-muted">
-    If you want your links to be clickable, copy and paste in the entire
-    address to your profile on another site. For some services, such as
-    Discord, this isn't possible, so you can just put in your username and
-    we'll display it.
-  </p>
+<h1 class="display-4">Where are you?</h1>
+<p class="text-muted">
+  Hit the plus to add a new location, hit the minus to remove it, and drag
+  and drop them to arrange them into your preferred order. They save as soon
+  as you click elsewhere.
+</p>
+<p class="text-muted">
+  If you want your links to be clickable, copy and paste in the entire
+  address to your profile on another site. For some services, such as
+  Discord, this isn't possible, so you can just put in your username and
+  we'll display it.
+</p>
+<form id="edit-identities-form">
   {% for identity in identities %}
   <div class="identity card bg-light shadow-sm w-100 mb-3" data-id="{{ identity.id }}">
     <div class="card-body">
@@ -46,33 +46,3 @@
   </button>
 </form>
 {% endblock "main" %}
-
-{% block "templates" %}
-<template id="identity">
-  <div class="identity card bg-light shadow-sm w-100 mb-3">
-    <div class="card-body">
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label name">Name</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control name" name="name" readonly placeholder="Example">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label url">URL</label>
-        <div class="col-sm-10">
-          <input type="text" class="form-control url" name="url" readonly placeholder="https://example.com/">
-        </div>
-      </div>
-      <div class="d-none float-left msg-saving">
-        Saving…
-      </div>
-      <div class="d-none float-left msg-deleting">
-        Deleting…
-      </div>
-      <button class="btn delete btn-outline-danger float-right">
-        <span class="fas fa-minus-circle"></span>
-      </button>
-    </div>
-  </div>
-</template>
-{% endblock "templates" %}
