--- a/templates/base.html
+++ b/templates/base.html
@@ -19,13 +19,11 @@
   </head>
 
   <body>
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-      <h5 class="my-0 mr-md-auto font-weight-normal">
-        <a class="navbar-brand" href="/">Where to find me</a>
-      </h5>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom shadow-sm">
+      <a class="navbar-brand flex-grow-1" href="/">Where to find me</a>
 
       {% if user.is_authenticated %}
-      <form method="post" action="{% url "logout" %}">{% csrf_token %}
+      <form class="form-inline flex-shrink-1" method="post" action="{% url "logout" %}">{% csrf_token %}
         <div class="btn-group">
           <div class="btn-group">
             <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,7 +47,7 @@
         <a class="btn btn-outline-primary" href="{% url "login" %}">Sign in</a>
       </div>
       {% endif %}
-    </div>
+    </nav>
 
     <div class="main px-3 py-3 pt-md-5 pb-md-4 mx-auto">
 
