--- a/templates/django_registration/activation_complete.html
+++ b/templates/django_registration/activation_complete.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block "main" %}
-<h1 class="display-4">Activated!</h1>
+<h1>Activated!</h1>
 <p>You're all set. Do you wanna <a href="{% url "login" %}">sign in</a>?</p>
 {% endblock "main" %}
