--- a/templates/django_registration/registration_complete.html
+++ b/templates/django_registration/registration_complete.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block "main" %}
-<h1 class="display-4">Registration complete</h1>
+<h1>Registration complete</h1>
 <p>Just click "confirm" in that email you should be getting.</p>
 {% endblock "main" %}
