--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block "main" %}
-<h1 class="display-4">Sign up</h1>
+<h1>Sign up</h1>
 
 {% crispy form %}
 {% endblock "main" %}
