--- a/templates/tos.html
+++ b/templates/tos.html
@@ -1,28 +1,29 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1 class="display-4 text-center">Terms of Service</h1>
-<p>
+<h1 class="text-center">Terms of Service</h1>
+<p class="text-justify">
   We wanna keep things simple.
 </p>
-<p>
+<p class="text-justify">
   We won't sell your information, but all the links you put up on your profile
   are publicly available. We may email you from time to time, if there's
   important information like a data breach or a significant change to the
   service or these terms of service. We promise we'll do so as rarely as
   possible.
 </p>
-<p>
+<p class="text-justify">
   You assert that the links on your profile point to identities that you have
   some control over. Don't just claim you're someone else, that'd be weird and
-  pointless.
+  pointless. If you do point to identities that aren't yours, we reserve the
+  right to restrict or bar you from the service.
 </p>
-<p>
+<p class="text-justify">
   We use cookies to enable you to log in to the site. We don't have any
   tracking cookies or anything like that. But if you want to log in, you have
   to accept that we have to use cookies to do that.
 </p>
-<p>
+<p class="text-justify">
   Please be kind.
 </p>
 {% endblock "main" %}
