--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1 class="display-4 text-center">Whoops.</h1>
+<h1 class="text-center">Whoops.</h1>
 <p class="lead text-center">
   We can't find that. Double-check and try again?
 </p>
