--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block "main" %}
-<h1 class="display-4">Sign in</h1>
+<h1>Sign in</h1>
 <form method="post" action="{% url "login" %}">
   {% csrf_token %}
   {{ form|crispy }}
