--- a/templates/wheretofindme/follower_list.html
+++ b/templates/wheretofindme/follower_list.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1 class="display-4">Who knows where I am?</h1>
+<h1>Who knows where I am?</h1>
 <div>
   {% for follow in object_list %}
-    <div class="card border-secondary shadow-sm mb-3">
+    <div class="card border-info shadow-sm mb-3">
       <div class="card-header">
         <a href="{% url "user-profile" slug=follow.from_user.username %}">
           {{ follow.from_user.username }}
