--- a/templates/wheretofindme/user_detail.html
+++ b/templates/wheretofindme/user_detail.html
@@ -15,7 +15,7 @@
 </span>
 {% endif %}
 
-<h1 class="text-center display-4">
+<h1 class="text-center">
   <small class="text-muted font-italic">Where to find</small>
   <br>
   {{ object.username }}
