Set secondary ordering on Follows
Fixes #47.

--- a/templates/wheretofindme/follow_list.html
+++ b/templates/wheretofindme/follow_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1>Where is everyone else?</h1>
+<h1>Who do I follow?</h1>
 <div>
   {% for follow in object_list %}
     <div class="card border-info shadow-sm mb-3">
