--- a/templates/wheretofindme/follower_list.html
+++ b/templates/wheretofindme/follower_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block "main" %}
-<h1>Who knows where I am?</h1>
+<h1>Who follows me?</h1>
 <div>
   {% for follow in object_list %}
     <div class="card border-info shadow-sm mb-3">
